hard-gists/2db1522dbfc5fe58b52c/run.log
=== Docker Run Log for 2db1522dbfc5fe58b52c ===
Started at: Mi 29. Okt 13:26:27 CET 2025

[2025-10-29 13:26:28] START: Running container for 2db1522dbfc5fe58b52c
[2025-10-29 13:26:28] SUCCESS: Container 0cdb200c8904bde69b622ec5a64cf33d39d07cdae16d9f48ea50dc000c5bc23c started for 2db1522dbfc5fe58b52c
=== Container logs for 2db1522dbfc5fe58b52c ===
  File "/snippet.py", line 41
    print "ID: "+str(parent)
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2db1522dbfc5fe58b52c ===
[2025-10-29 13:26:30] INFO: Container 0cdb200c8904bde69b622ec5a64cf33d39d07cdae16d9f48ea50dc000c5bc23c has stopped
